# ClaimPilot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  worker.py
backend/app/api/: admin.py  auth.py  cases.py  health.py  metrics.py  track.py
backend/app/audit/: writer.py
backend/app/auth/: dependencies.py  security.py  users.py
backend/app/core/: dlq.py  redis.py
backend/app/db/: seed.py  session.py
backend/app/guardrails/: pii.py  sanitize.py
backend/app/llm/: adapters.py  client.py  pricing.py  registry.py
backend/app/llm/prompts/: draft_decision.v1.md  draft_decision.v2.md  draft_decision.v3.md  intake_extract.v1.md  intake_extract.v2.md  intake_extract.v3.md  qa_review.v1.md  qa_review.v2.md
backend/app/models/: __init__.py  audit.py  case.py  policy.py  policy_clause.py  user.py
backend/app/pipeline/: checkpointer.py  domain_config.py  graph.py  schemas.py  state.py
backend/app/pipeline/nodes/: draft.py  evidence.py  intake.py  qa.py  route.py  validate.py
backend/app/rag/: embeddings.py  ingest.py  retrieve.py
backend/app/tools/: circuit_breaker.py  crm.py  parser.py  policies.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_pgvector_policy_clauses.py  0003_route_reason_tokens_used.py  0004_human_decision.py  0005_policies.py
backend/tests/: conftest.py  fakes.py  test_admin_users_api.py  test_audit_log.py  test_auth.py  test_cases_api.py  test_circuit_breaker.py  test_crm_client.py  test_decision_api.py  test_dependency_down.py  test_dlq.py  test_embeddings.py  test_evidence_node.py  test_guardrails.py  test_health.py  test_llm_client.py  test_llm_registry.py  test_metrics_api.py  test_pdf_parser.py  test_pipeline_nodes.py  test_pipeline_resumability.py  test_pricing.py  test_qa_node.py  test_qa_routing_graph.py  test_rag.py  test_route_node.py  test_schemas.py  test_track_api.py  test_worker.py
configs/: domain.claims.yaml  evals.yaml  models.yaml
configs/policies/: auto.md  health.md  home.md
docs/: ENGINEERING_PRINCIPLES.md
evals/: generate_dataset.py  report.md  results.json  run_evals.py  scoring.py  test_evals.py
evals/dataset/: cases.jsonl
frontend/: nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: layout.tsx  page-header.tsx
frontend/src/lib/: api.ts  (+1 more)
mock_crm/: Dockerfile  pyproject.toml
mock_crm/app/: main.py  seed_data.py  storage.py
mock_crm/tests/: test_crm_service.py
(+8 files in other folders)
